# ShadowGen-ML-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARTICLE_TEXT.md  Dockerfile.service  IMAGE_PROMPTS.md  README.md  docker-compose.service.yml  docker-compose.yml  index.html  pyproject.toml  rebuild-service-container.cmd  rebuild-triton.cmd  requirements.ml.txt  requirements.txt  run-service-triton-segmenter.cmd  run-service.cmd  start-docker-stack.cmd  start-service-container.cmd  start-service-triton-window.cmd  start-service-window.cmd  start-service.cmd  start-triton.cmd  stop-docker-stack.cmd  stop-service-container.cmd
agent/: INSTRUCTIONS.md  OPERATING_CONTRACT.md  README.md  TASKS.md
docs/: README.md  api.md  architecture.md  docker-local.md  frontend-shadow-model-contract.md  modules.md  runbook-local.md  service-contract.md  shadow-v2-model-contract.md  worker-core-contract.md  workflow.md
docs/first/: breef.md  contract_new-ml-service.md  models.md  overview.md
docs/project-page/: IMAGE_PROMPTS.md  README.md  index.html
ops/triton/: .dockerignore  Dockerfile.segmenter-python
src/shadowgen_ml_service/: __init__.py  app.py  config.py  main.py  schemas.py  web_ui.py
tests/: test_api.py  test_architecture.py  test_backend_policy.py  test_backend_selector.py  test_birefnet_torch_runtime.py  test_config.py  test_depth.py  test_detector.py  test_foreground_refiner.py  test_geometry.py  test_images.py  test_normals.py  test_preprocess_cache.py  test_runtime.py  test_segmenter.py  test_segmenter_triton.py  test_shadow_v2_diff.py  test_stage_runner.py  test_triton_transport.py
tools/: benchmark_stage_backends.py  check_triton_segmenter_ready.py  export_detector_onnx.py  export_segmenter_onnx.py  prepare_rmbg2_onnx_triton.py  prepare_shadow_v2_sample_pack.py  run_triton_segmenter_python.cmd  run_triton_segmenter_python.ps1  smoke_triton_detector.py  smoke_triton_segmenter.py
(+120 files in other folders)
