[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowgen-ml-service"
version = "0.1.0"
description = "Stateless ShadowGen ML service for object cutout, shadow generation, and composition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
  "pillow>=10.4,<11.0",
  "numpy>=1.26,<3.0",
  "opencv-python-headless>=4.10,<5.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]
ml = [
  "transformers>=4.48,<5.0",
  "huggingface_hub>=0.31,<1.0",
  "safetensors>=0.5,<1.0",
  "onnx>=1.16,<2.0",
  "diffusers>=0.35,<1.0",
  "timm>=1.0,<2.0",
  "einops>=0.8,<1.0",
  "kornia>=0.8,<1.0",
  "geocalib @ git+https://github.com/cvg/GeoCalib.git",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
